--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/open-sans": "^4.5.10",
     "@reduxjs/toolkit": "^1.8.2",
+    "@supabase/supabase-js": "^1.35.4",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "framer-motion": "^6.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
