--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/open-sans": "^4.5.10",
+    "@hookform/resolvers": "^2.9.7",
     "@reduxjs/toolkit": "^1.8.2",
     "@supabase/supabase-js": "^1.35.4",
     "axios": "^0.27.2",
@@ -19,11 +20,13 @@
     "framer-motion": "^6.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.34.1",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
