--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "rxjs": "^7.5.7",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "zod": "^3.18.0"
